Cleanup: Wave 6 submission polish + security fixes
- Enable all chain type assertions in contract (27+ security checks)
- Fix hardcoded Windows path in wsl_deploy_wrapper.sh
- Remove TODO comments from bankroll contract
- Remove debug console.log from frontend
- Update .gitignore for test artifacts
- Add E2E test suite with Playwright
- Add demo video script for submission

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1313,7 +1313,7 @@
                 await graphql('mutation { initialSetup }');
                 log('Connected to lobby', 'info');
             } catch (e) {
-                console.log('InitialSetup error (may be ok):', e);
+                // Initial setup may fail if already configured - this is expected
             }
 
             showLoader('Finding opponent...');
